made first section

--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,38 @@
             </div>
         </div>
     </header>
+
+    <section class="work-managment">
+        <div class="container">
+            <div class="work-managment__block project">
+                <div class="work-managment__block__txt">
+                    <h2 class="title">Project Management</h2>
+                    <img src="img/managment/line-project.svg" alt="Line header" class="work-managment__block__txt__line project-line">
+                    <p class="body-text">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams
+                        directly from the app. Take
+                        photos with the mobile app and save them to a note.</p>
+                    <button class="btn">
+                        Get Started
+                        <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                    </button>
+                </div>
+                <img src="img/managment/project-img.png" alt="Men" class="work-managment__block__img">
+            </div>
+            <div class="work-managment__block together">
+                <img src="img/managment/together-img.svg" alt="Together" class="work-managment__block__img">
+                <div class="work-managment__block__txt">
+                    <h2 class="title">Work together</h2>
+                    <img src="img/managment/line-together.svg" alt="Line header" class="work-managment__block__txt__line together-line">
+                    <p class="body-text">With whitepace, share your notes with your colleagues and collaborate on them.
+                    You can also publish a note to the internet and share the URL with others.</p>
+                    <button class="btn">
+                        Get Started
+                        <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
