almost full site

--- a/src/index.html
+++ b/src/index.html
@@ -89,5 +89,252 @@
         </div>
     </section>
 
+    <section class="extension">
+        <div class="container">
+            <div class="extension__txt">
+                <h2 class="title">Use as Extension</h2>
+                <img src="img/extens/line.svg" alt="Line header" class="extension__line">
+                <p class="body-text">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
+                <button class="btn">
+                    Let’s Go
+                    <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                </button>
+            </div>
+            <img src="img/extens/image.png" alt="Men" class="extension__img">
+        </div>
+    </section>
+
+    <section class="customize">
+        <div class="container">
+            <img src="img/custom/img.png" alt="Customize" class="customize__img">
+            <div class="customize__txt">
+                <h2 class="title">Customise it to <br> your needs</h2>
+                <img src="img/custom/line.svg" alt="Line header" class="customize__line">
+                <p class="body-text">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
+                <button class="btn">
+                    Let’s Go
+                    <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <section class="plan">
+        <div class="container">
+            <div class="plan__txt">
+                <h2 class="title">Choose Your Plan</h2>
+                <img src="img/plan/line.svg" alt="Line" class="plan-line">
+                <p class="body-text">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has <br> the right plan for you.</p>
+            </div>
+            <div class="plan__price">
+                <div class="plan__price__item">
+                    <h3 class="plan__price__item__title">Free</h3>
+                    <div class="plan__price__item__amount">$0</div>
+                    <div class="plan__price__item__descr">Capture ideas and find them quickly</div>
+                    <ul class="plan__price__item__lists">
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Sync unlimited devices
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            10 GB monthly uploads
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            200 MB max. note size
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Customize Home dashboard and access extra widgets
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Connect primary Google Calendar account
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Connect primary Google Calendar account
+                        </li>
+                    </ul>
+                    <butoon class="btn  btn-border">Get Started</butoon>
+                </div>
+                <div class="plan__price__item plan-active">
+                    <h3 class="plan__price__item__title">Personal</h3>
+                    <div class="plan__price__item__amount">$11.99</div>
+                    <div class="plan__price__item__descr">Keep home and family on track</div>
+                    <ul class="plan__price__item__lists">
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan-active.svg" alt="Icon plan">
+                            Sync unlimited devices
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan-active.svg" alt="Icon plan">
+                            10 GB monthly uploads
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan-active.svg" alt="Icon plan">
+                            200 MB max. note size
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan-active.svg" alt="Icon plan">
+                            Customize Home dashboard and access extra widgets
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan-active.svg" alt="Icon plan">
+                            Connect primary Google Calendar account
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan-active.svg" alt="Icon plan">
+                            Add due dates, reminders, and notifications to your tasks
+                        </li>
+                    </ul>
+                    <butoon class="btn">Get Started</butoon>
+                </div>
+                <div class="plan__price__item">
+                    <h3 class="plan__price__item__title">Organization</h3>
+                    <div class="plan__price__item__amount">$49.99</div>
+                    <div class="plan__price__item__descr">Capture ideas and find them quickly</div>
+                    <ul class="plan__price__item__lists">
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Sync unlimited devices
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            10 GB monthly uploads
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            200 MB max. note size
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Customize Home dashboard and access extra widgets
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Connect primary Google Calendar account
+                        </li>
+                        <li class="plan__price__item__lists__list">
+                            <img src="img/icon/plan.svg" alt="Icon plan">
+                            Add due dates, reminders, and notifications to your tasks
+                        </li>
+                    </ul>
+                    <butoon class="btn btn-border">Get Started</butoon>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="work-everywhere">
+        <img src="img/bg-everywhere.svg" alt="Spot" class="spot">
+        <div class="container">
+            <div class="work-everywhere__content">
+                <h2 class="title">Your work, everywhere you are</h2>
+                <img src="img/line-decor-everywhere.svg" alt="Line" class="work-everywhere__line">
+                <p class="body-text">Access your notes from your computer, phone or tablet by synchronising with various services,
+                    including whitepace,
+                    Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also
+                    available!</p>
+                <button class="btn">
+                    Try Taskey
+                    <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <section class="data">
+        <div class="container">
+            <div class="data__txt">
+                <h2 class="title">100% your data</h2>
+                <img src="img/data-line.svg" alt="Line data" class="data__line">
+                <p class="body-text">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
+                <button class="btn">
+                    Read more
+                    <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                </button>
+            </div>
+            <img src="img/data-img.svg" alt="Data" class="data__img">
+        </div>
+    </section>
+
+    <section class="sponsors">
+        <div class="container">
+            <h2 class="title">Our sponsors</h2>
+            <img src="img/sponsor-line.svg" alt="Line" class="sponsors-line">
+            <div class="sponsors__wrapper">
+                <img src="img/icon/apple.svg" alt="Apple">
+                <img src="img/icon/microsoft.svg" alt="Microsoft">
+                <img src="img/icon/slack.svg" alt="Slack">
+                <img src="img/icon/google.svg" alt="Google">
+            </div>
+        </div>
+    </section>
+
+    <section class="apps">
+        <div class="container">
+            <img src="img/apps-img.svg" alt="Apps image" class="apps__img">
+            <div class="apps__txt">
+                <h2 class="title">Work with Your Favorite Apps Using whitepace</h2>
+                <p class="body-text">Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success..</p>
+                <button class="btn">
+                    Read more
+                    <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <section class="response">
+        <div class="container">
+            <h2 class="title">What Our Clients Says</h2>
+            <img src="img/respones-line.svg" alt="Line" class="response-line">
+            <div class="response__wrapper">
+                <div class="response__wrapper__item">
+                    <img src="img/respones-quote.svg" alt="Quote">
+                    <p class="body-text">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                    <hr class="response__hr">
+                    <div class="response__wrapper__item__user">
+                        <img src="img/first-user.png" alt="User avatar" class="response__wrapper__item__user__avatar">
+                        <div class="response__wrapper__item__user__txt">
+                            <div class="response__wrapper__item__user__txt__name">Oberon Shaw, MCH</div>
+                            <div class="response__wrapper__item__user__txt__job">Head of Talent Acquisition, North America</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="response__wrapper__item respones-active">
+                    <img src="img/respones-quote-active.svg" alt="">
+                    <p class="body-text">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                    <hr class="response__hr">
+                    <div class="response__wrapper__item__user">
+                        <img src="img/second-user.png" alt="User" class="response__wrapper__item__user__avatar">
+                        <div class="response__wrapper__item__user__txt">
+                            <div class="response__wrapper__item__user__txt__name">Oberon Shaw, MCH</div>
+                            <div class="response__wrapper__item__user__txt__job">Head of Talent Acquisition, North America</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="response__wrapper__item respones-active">
+                    <img src="img/respones-quote-active.svg" alt="">
+                    <p class="body-text">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                    <hr class="response__hr">
+                    <div class="response__wrapper__item__user">
+                        <img src="img/third-user.png" alt="User" class="response__wrapper__item__user__avatar">
+                        <div class="response__wrapper__item__user__txt">
+                            <div class="response__wrapper__item__user__txt__name">Oberon Shaw, MCH</div>
+                            <div class="response__wrapper__item__user__txt__job">Head of Talent Acquisition, North America</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="response__points">
+                <div class="response__points__point"></div>
+                <div class="response__points__point active-point"></div>
+                <div class="response__points__point"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
