--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,34 @@
         <div class="container">
             <nav class="nav">
                 <div class="header__logo">
-                    <img src="img/icon/logo.svg" alt="Logo">
+                    <img src="img/logo/logo.svg" alt="Logo">
                     <div class="header__logo__txt">whitepace</div>
                 </div>
                 <div class="right">
                     <ul class="header__links">
                         <li class="header__links__link">
-                            Products
-                            <img src="img/icon/down_arrow.svg" alt="Down arrow" >
+                            <a href="#">
+                                Products
+                                <img src="img/icon/down_arrow.svg" alt="Down arrow">
+                            </a>
                         </li>
                         <li class="header__links__link">
-                            Solutions
-                            <img src="img/icon/down_arrow.svg" alt="Down arrow" >
+                            <a href="#">
+                                Solutions
+                                <img src="img/icon/down_arrow.svg" alt="Down arrow">
+                            </a>
                         </li>
                         <li class="header__links__link">
-                            Resources
-                            <img src="img/icon/down_arrow.svg" alt="Down arrow" >
+                            <a href="#">
+                                Resources
+                                <img src="img/icon/down_arrow.svg" alt="Down arrow">
+                            </a>
                         </li>
                         <li class="header__links__link">
-                            Pricing
-                            <img src="img/icon/down_arrow.svg" alt="Down arrow" >
+                            <a href="#">
+                                Pricing
+                                <img src="img/icon/down_arrow.svg" alt="Down arrow">
+                            </a>
                         </li>
                     </ul>
                     <div class="btns">
@@ -52,7 +60,7 @@
                         <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                     </button>
                 </div>
-                <img src="img/header/header.png" alt="Promo image" class="promo__img">
+                <img src="img/sections-img/header.png" alt="Promo image" class="promo__img">
             </div>
         </div>
     </header>
@@ -62,7 +70,7 @@
             <div class="work-managment__block project">
                 <div class="work-managment__block__txt">
                     <h2 class="title">Project Management</h2>
-                    <img src="img/managment/line-project.svg" alt="Line header" class="work-managment__block__txt__line project-line">
+                    <img src="img/decoration-line/line-project.svg" alt="Line header" class="work-managment__block__txt__line project-line">
                     <p class="body-text">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams
                         directly from the app. Take
                         photos with the mobile app and save them to a note.</p>
@@ -71,17 +79,17 @@
                         <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                     </button>
                 </div>
-                <img src="img/managment/project-img.png" alt="Men" class="work-managment__block__img">
+                <img src="img/sections-img/project.png" alt="Men" class="work-managment__block__img">
             </div>
             <div class="work-managment__block together">
-                <img src="img/managment/together-img.svg" alt="Together" class="work-managment__block__img">
+                <img src="img/sections-img/together.svg" alt="Together" class="work-managment__block__img">
                 <div class="work-managment__block__txt">
                     <h2 class="title">Work together</h2>
-                    <img src="img/managment/line-together.svg" alt="Line header" class="work-managment__block__txt__line together-line">
+                    <img src="img/decoration-line/line-together.svg" alt="Line header" class="work-managment__block__txt__line together-line">
                     <p class="body-text">With whitepace, share your notes with your colleagues and collaborate on them.
                     You can also publish a note to the internet and share the URL with others.</p>
                     <button class="btn">
-                        Get Started
+                        Try it now
                         <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                     </button>
                 </div>
@@ -93,23 +101,23 @@
         <div class="container">
             <div class="extension__txt">
                 <h2 class="title">Use as Extension</h2>
-                <img src="img/extens/line.svg" alt="Line header" class="extension__line">
+                <img src="img/decoration-line/extens-line.svg" alt="Line header" class="extension__line">
                 <p class="body-text">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
                 <button class="btn">
                     Let’s Go
                     <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                 </button>
             </div>
-            <img src="img/extens/image.png" alt="Men" class="extension__img">
+            <img src="img/sections-img/extension.png" alt="Men" class="extension__img">
         </div>
     </section>
 
     <section class="customize">
         <div class="container">
-            <img src="img/custom/img.png" alt="Customize" class="customize__img">
+            <img src="img/sections-img/custom.png" alt="Customize" class="customize__img">
             <div class="customize__txt">
                 <h2 class="title">Customise it to <br> your needs</h2>
-                <img src="img/custom/line.svg" alt="Line header" class="customize__line">
+                <img src="img/decoration-line/custom-line.svg" alt="Line header" class="customize__line">
                 <p class="body-text">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
                 <button class="btn">
                     Let’s Go
@@ -123,7 +131,7 @@
         <div class="container">
             <div class="plan__txt">
                 <h2 class="title">Choose Your Plan</h2>
-                <img src="img/plan/line.svg" alt="Line" class="plan-line">
+                <img src="img/decoration-line/plan-line.svg" alt="Line" class="plan-line">
                 <p class="body-text">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has <br> the right plan for you.</p>
             </div>
             <div class="plan__price">
@@ -228,11 +236,11 @@
     </section>
 
     <section class="work-everywhere">
-        <img src="img/bg-everywhere.svg" alt="Spot" class="spot">
+        <img src="img/bg/bg-everywhere.svg" alt="Spot" class="spot">
         <div class="container">
             <div class="work-everywhere__content">
                 <h2 class="title">Your work, everywhere you are</h2>
-                <img src="img/line-decor-everywhere.svg" alt="Line" class="work-everywhere__line">
+                <img src="img/decoration-line/everywhere.svg" alt="Line" class="work-everywhere__line">
                 <p class="body-text">Access your notes from your computer, phone or tablet by synchronising with various services,
                     including whitepace,
                     Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also
@@ -249,21 +257,21 @@
         <div class="container">
             <div class="data__txt">
                 <h2 class="title">100% your data</h2>
-                <img src="img/data-line.svg" alt="Line data" class="data__line">
+                <img src="img/decoration-line/data-line.svg" alt="Line data" class="data__line">
                 <p class="body-text">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
                 <button class="btn">
                     Read more
                     <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                 </button>
             </div>
-            <img src="img/data-img.svg" alt="Data" class="data__img">
+            <img src="img/sections-img/data-img.svg" alt="Data" class="data__img">
         </div>
     </section>
 
     <section class="sponsors">
         <div class="container">
             <h2 class="title">Our sponsors</h2>
-            <img src="img/sponsor-line.svg" alt="Line" class="sponsors-line">
+            <img src="img/decoration-line/sponsor-line.svg" alt="Line" class="sponsors-line">
             <div class="sponsors__wrapper">
                 <img src="img/icon/apple.svg" alt="Apple">
                 <img src="img/icon/microsoft.svg" alt="Microsoft">
@@ -275,7 +283,7 @@
 
     <section class="apps">
         <div class="container">
-            <img src="img/apps-img.svg" alt="Apps image" class="apps__img">
+            <img src="img/sections-img/apps-img.svg" alt="Apps image" class="apps__img">
             <div class="apps__txt">
                 <h2 class="title">Work with Your Favorite Apps Using whitepace</h2>
                 <p class="body-text">Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success..</p>
@@ -290,14 +298,14 @@
     <section class="response">
         <div class="container">
             <h2 class="title">What Our Clients Says</h2>
-            <img src="img/respones-line.svg" alt="Line" class="response-line">
+            <img src="img/decoration-line/respones-line.svg" alt="Line" class="response-line">
             <div class="response__wrapper">
                 <div class="response__wrapper__item">
-                    <img src="img/respones-quote.svg" alt="Quote">
+                    <img src="img/icon/respones-quote.svg" alt="Quote">
                     <p class="body-text">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
                     <hr class="response__hr">
                     <div class="response__wrapper__item__user">
-                        <img src="img/first-user.png" alt="User avatar" class="response__wrapper__item__user__avatar">
+                        <img src="img/users/first-user.png" alt="User avatar" class="response__wrapper__item__user__avatar">
                         <div class="response__wrapper__item__user__txt">
                             <div class="response__wrapper__item__user__txt__name">Oberon Shaw, MCH</div>
                             <div class="response__wrapper__item__user__txt__job">Head of Talent Acquisition, North America</div>
@@ -305,11 +313,11 @@
                     </div>
                 </div>
                 <div class="response__wrapper__item respones-active">
-                    <img src="img/respones-quote-active.svg" alt="">
+                    <img src="img/icon/respones-quote-active.svg" alt="Quote">
                     <p class="body-text">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
                     <hr class="response__hr">
                     <div class="response__wrapper__item__user">
-                        <img src="img/second-user.png" alt="User" class="response__wrapper__item__user__avatar">
+                        <img src="img/users/second-user.png" alt="User" class="response__wrapper__item__user__avatar">
                         <div class="response__wrapper__item__user__txt">
                             <div class="response__wrapper__item__user__txt__name">Oberon Shaw, MCH</div>
                             <div class="response__wrapper__item__user__txt__job">Head of Talent Acquisition, North America</div>
@@ -317,11 +325,11 @@
                     </div>
                 </div>
                 <div class="response__wrapper__item respones-active">
-                    <img src="img/respones-quote-active.svg" alt="">
+                    <img src="img/icon/respones-quote-active.svg" alt="Quote">
                     <p class="body-text">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
                     <hr class="response__hr">
                     <div class="response__wrapper__item__user">
-                        <img src="img/third-user.png" alt="User" class="response__wrapper__item__user__avatar">
+                        <img src="img/users/third-user.png" alt="User" class="response__wrapper__item__user__avatar">
                         <div class="response__wrapper__item__user__txt">
                             <div class="response__wrapper__item__user__txt__name">Oberon Shaw, MCH</div>
                             <div class="response__wrapper__item__user__txt__job">Head of Talent Acquisition, North America</div>
@@ -336,5 +344,118 @@
             </div>
         </div>
     </section>
+
+    <section class="free-trial">
+        <div class="container">
+            <h2 class="title">Try Whitepace today</h2>
+            <div class="free-trial__txt body-text">Get started for free.
+            Add your whole team as your needs grow.</div>
+            <button class="btn">
+                Try Taskey free
+                <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+            </button>
+            <div class="free-trial__txt another-margin">On a big team? Contact sales</div>
+            <div class="free-trial__wrapper">
+                <img src="img/icon/apple-free-trial.svg" alt="Apple icon" class="free-trial__wrapper__img">
+                <img src="img/icon/windows-free-trial.svg" alt="Windows icon" class="free-trial__wrapper__img">
+                <img src="img/icon/android-free-trial.svg" alt="Android icon" class="free-trial__wrapper__img">
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__content__about">
+                    <div class="footer__content__about__logo">
+                        <img src="img/logo/footer-logo.svg" alt="Logo">
+                        whitepace
+                    </div>
+                    <p class="footer__content__about__txt">whitepace was created for the new ways we live and work. We make a better workspace around the world</p>
+                </div> 
+                <ul class="footer__content__lists">
+                    <li class="footer__content__lists__list">Product</li>
+                    <li class="footer__content__lists__list active-list">
+                        <a href="#">Overview</a>
+                    </li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Customer stories</a>
+                    </li>
+                </ul>
+                <ul class="footer__content__lists">
+                    <li class="footer__content__lists__list">Resources</li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Guides & tutorials</a>
+                    </li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Help center</a>
+                    </li>
+                </ul>
+                <ul class="footer__content__lists">
+                    <li class="footer__content__lists__list">Company</li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">About us</a>
+                    </li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Careers</a>
+                    </li>
+                    <li class="footer__content__lists__list">
+                        <a href="#">Media kit</a>
+                    </li>
+                </ul>
+                <div class="footer__content__start">
+                    <h2 class="footer__content__start__title">Try It Today</h2>
+                    <p class="footer__content__start__txt">Get started for free. Add your whole team as your needs grow.</p>
+                    <button class="btn">
+                        Start today
+                        <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
+                    </button>
+                </div>
+            </div>
+            <hr>
+            <div class="footer__bottom">
+                <ul class="footer__bottom__conditions">
+                    <li class="footer__bottom__conditions__condition">
+                        <img src="img/icon/footer-lang.svg" alt="Language icon">
+                        English
+                        <img src="img/icon/down_arrow.svg" alt="Down arrow">
+                    </li>
+                    <li class="footer__bottom__conditions__condition">
+                        <a href="#">Terms & privacy</a>
+                    </li>
+                    <li class="footer__bottom__conditions__condition">
+                        <a href="#">Security</a>
+                    </li>
+                    <li class="footer__bottom__conditions__condition">
+                        <a href="#">Status</a>
+                    </li>
+                    <li class="footer__bottom__conditions__condition">©2021 Whitepace LLC.</li>
+                </ul>
+                <ul class="footer__bottom__social">
+                    <li>
+                        <a href="#">
+                            <img src="img/icon/facebook-footer.svg" alt="Facebook">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/icon/twitter-footer.svg" alt="Twitter">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/icon/linkedin-footer.svg" alt="Linkedin">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
